[metadata]
name = moss
summary = monitor plugin
description-file =
    README.rst
author = Slancer
author-email = service@slancer.com
home-page = http://docs.oceanstack.slancer.com/moss/latest/
license = Apache License, Version 2.0
classifier =
    Environment :: Slancer
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    moss
data_files =
    share/moss/heka = heka/*
    share/moss/doc = doc/*
    share/moss = setup.cfg


[entry_points]

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
